[gd_scene load_steps=4 format=3 uid="uid://oihrx253mx55"]

[ext_resource type="Script" path="res://src/scenes/chatbox/chatbox.gd" id="1_i2ex6"]
[ext_resource type="Script" path="res://src/scenes/chatbox/LineEdit.gd" id="2_fix1v"]
[ext_resource type="Script" path="res://src/scenes/chatbox/RichTextLabel.gd" id="3_nta7l"]

[node name="Chatbox" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_i2ex6")
metadata/_edit_group_ = true

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 216.0
offset_right = 374.0
offset_bottom = 271.0
placeholder_text = "(Say something...)"
script = ExtResource("2_fix1v")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 438.0
offset_bottom = 217.0
scroll_following = true
script = ExtResource("3_nta7l")

[node name="Polygon2D" type="Polygon2D" parent="RichTextLabel"]
position = Vector2(0.283336, -0.00471699)
scale = Vector2(1.14167, 0.995283)
color = Color(0, 0, 0, 0.352941)
polygon = PackedVector2Array(-2, -2.00474, 378, -1, 378.504, 104.533, 379.022, 213.009, -1, 211)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 219.0
offset_right = 441.0
offset_bottom = 270.0
text = "Send"

[connection signal="send_message" from="LineEdit" to="." method="_on_line_edit_send_message"]
[connection signal="send_message" from="LineEdit" to="RichTextLabel" method="_on_text_edit_send_message"]
[connection signal="text_submitted" from="LineEdit" to="LineEdit" method="_on_text_submitted"]
[connection signal="pressed" from="Button" to="LineEdit" method="_on_button_pressed"]
